Sun Jun  9 14:41:05 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack): numwords_allocated argument removed.

	* internal.h (rb_integer_pack): Follow the above change.

	* hash.c (rb_hash): Ditto.

	* time.c (v2w_bignum): Ditto.

	* pack.c (pack_pack): Ditto.

	* random.c (int_pair_to_real_inclusive): Ditto.
	  (rand_init): Ditto.
	  (random_load): Ditto.
	  (limited_big_rand): Ditto.

Sun Jun  9 09:34:44 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_base_powerof2): New function.
	  (rb_big2str0): Use big2str_base_powerof2 if base is 2, 4, 8, 16 or 32.

Sun Jun  9 00:59:04 2013  Tanaka Akira  <akr@fsij.org>

	* hash.c (rb_hash): Use rb_integer_pack to obtain least significant
	  long integer.

Sat Jun  8 23:56:00 2013  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_num_to_uint): Use rb_absint_size instead of
	  RBIGNUM_LEN.

Sat Jun  8 22:53:45 2013  Tanaka Akira  <akr@fsij.org>

	* marshal.c (r_object0): Use rb_integer_unpack.

Sat Jun  8 22:18:57 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (v2w): Use rb_absint_size instead of RBIGNUM_LEN.

Sat Jun  8 21:47:33 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (v2w_bignum): Simplified using rb_integer_pack.
	  (rb_big_abs_find_maxbit): Removed.

Sat Jun  8 21:03:40 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_singlebit_p): New function.

	* internal.h (rb_absint_singlebit_p): Declared.

	* time.c (v2w_bignum): Use rb_absint_singlebit_p instead of
	  rb_big_abs_find_minbit.
	  (rb_big_abs_find_minbit): Removed.

Sat Jun  8 20:24:23 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_big_abs_find_maxbit): Use rb_absint_size.
	  (bdigit_find_maxbit): Removed.

Sat Jun  8 19:47:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c (include_modules_at): invalidate method cache if included
	  module contains constants

	* test/ruby/test_module.rb: add test

Sat Jun  8 19:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
